# CoInML

./: .dockerignore  .env.example  .gitignore  DATA_FORMAT.md  Dockerfile.app  Dockerfile.worker  LICENSE  LICENSE.txt  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  start_worker.sh
.devcontainer/: devcontainer.json
SCULPT/: .gitignore  LICENSE  README.md  requirements.txt
SCULPT/src/: app.py
SCULPT/tests/: test_basic.py
data/: README.md
data/examples/: README.md
prefect/: entrypoint.sh  prefect.yaml
prefect/flows/: umap_flow.py
prefect1/flows/: umap_flow.py
prefect1/tasks/: umap_tasks.py
prefect_worker/flows/: umap_flow.py
prefect_worker/tasks/: umap_tasks.py
sculpt_env311/: pyvenv.cfg
sculpt_env311/Scripts/: activate  activate.bat  get_gprof  get_objgraph  numba  undill
src/: Dockerfile.app  Dockerfile.worker  Makefile  PREFECT_MIGRATION_STATUS.md  SQLite_docker-compose.yml  debug_prefect.py  docker-compose.yml  fix_umap_callback.sh  init_prefect.sh  register_flows.py  requirements.txt  setup_docker.sh  test_cloud.py  test_docker_prefect.py  test_prefect.py  test_submit.py  verify_cloud.py
src/BACKUP_20250819_165044/sculpt/: app.py
src/sculpt/: app.py
src/sculpt copy/callbacks/: custom_plot_callbacks.py  initialization_callbacks.py
src/sculpt copy/utils/: file_handlers.py  ui.py
src/sculpt-backup-20250908-140804/callbacks/: download_callbacks.py  selection_callbacks.py  visualization_callbacks.py
src/sculpt/assets/: style.css
tests/: test_basic.py  test_cloud.py  test_docker_prefect.py  test_prefect.py  test_submit.py
(+43 files in other folders)
